--- a/src/main/webapp/scripts/app/usager/etudier/payment/payment.html
+++ b/src/main/webapp/scripts/app/usager/etudier/payment/payment.html
@@ -15,7 +15,7 @@
 	    	</span>
 	    </div>
 	    <div class="col-xs-10 col-sm-10 col-md-10 col-lg-10 form-title-text">
-	    	<p translate="etudier.payment.form.title">Payment</p>
+	    	<p translate="payment.form.title">Payment</p>
 	    </div>
 	</div>
 	<br>
@@ -41,7 +41,7 @@
                     <div class="row">
                         <div class="col-xs-12">
                             <div class="form-group">
-                                <label for="cardOwner" translate="etudier.payment.form.cardOwner">CARD OWNER</label>
+                                <label for="cardOwner" translate="payment.form.cardOwner">CARD OWNER</label>
                                 <input type="text" class="form-control" name="cardOwner" ng-model="payment.cardOwner" required autofocus />
                             </div>
                         </div>                        
@@ -49,7 +49,7 @@
                     <div class="row">
                         <div class="col-xs-12">
                             <div class="form-group">
-                                <label for="cardNumber" translate="etudier.payment.form.cardNumber">CARD NUMBER</label>
+                                <label for="cardNumber" translate="payment.form.cardNumber">CARD NUMBER</label>
                                 <div class="input-group">
                                     <span class="input-group-addon"><i class="fa fa-credit-card"></i></span>
                                     <input 
@@ -67,7 +67,7 @@
                     <div class="row">
                         <div class="col-xs-6 col-md-6">
                             <div class="form-group">
-                                <label for="cardExpiry" translate="etudier.payment.form.cardExpiringDate">EXPIRATION DATE</label>
+                                <label for="cardExpiry" translate="payment.form.cardExpiringDate">EXPIRATION DATE</label>
                                 <input 
                                     type="tel" 
                                     class="form-control" 
@@ -81,7 +81,7 @@
                         </div>
                         <div class="col-xs-6 col-md-6 pull-right">
                             <div class="form-group">
-                                <label for="cardCVC" translate="etudier.payment.form.cardCV">CV CODE</label>
+                                <label for="cardCVC" translate="payment.form.cardCV">CV CODE</label>
                                 <input 
                                     type="tel" 
                                     class="form-control"
