--- a/src/main/webapp/scripts/app/usager/etudier/etudier.html
+++ b/src/main/webapp/scripts/app/usager/etudier/etudier.html
@@ -5,11 +5,9 @@
    		</div>
     </div>
     <br>
-    <steps-menu stepnumber="0"></steps-menu>
-    <br><br>
     <div class="row">
     	<div class="col-xs-8 col-xs-offset-1 col-sm-8 col-sm-offset-1 col-md-8 col-md-offset-1 col-lg-8 col-lg-offset-1">
-    		<h3 translate="etudier.information.subtitle">4 steps for your request</h3>
+    		<h3 translate="etudier.step.title">4 steps for your request</h3>
     	</div>
    	</div>
    	<br><br>
@@ -20,7 +18,7 @@
 	    	</span>
 	    </div>
 	    <div class="col-xs-10 col-sm-10 step-text">
-	    	<p translate="etudier.identity.form.title">Identity</p>
+	    	<p translate="etudier.identity.step.long">Identity</p>
 	    </div>
 	</div>
     <div class="row">
@@ -30,7 +28,7 @@
 	    	</span>
 	    </div>
 	    <div class="col-xs-10 col-sm-10 step-text">
-	    	<p translate="etudier.address.form.title">Address</p>
+	    	<p translate="etudier.address.step.long">Address</p>
 	    </div>
 	</div>
     <div class="row">
@@ -40,7 +38,7 @@
 	    	</span>
 	    </div>
 	    <div class="col-xs-10 col-sm-10 step-text">
-	    	<p translate="etudier.project.form.title">Project</p>
+	    	<p translate="etudier.project.step.long">Project</p>
 	    </div>
 	</div>
     <div class="row">
@@ -50,7 +48,7 @@
 	    	</span>
 	    </div>
 	    <div class="col-xs-10 col-sm-10 step-text">
-	    	<p translate="etudier.payment.form.title">Payment</p>
+	    	<p translate="etudier.payment.step.long">Payment</p>
 	    </div>
 	</div>
 	<br>
