creation page rdv

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -65,8 +65,8 @@
         <script src="bower_components/ng-file-upload/ng-file-upload.min.js"></script>
   		<script src="bower_components/moment/min/moment.min.js"></script>
   		<script src="bower_components/moment/min/moment-with-locales.min.js"></script>
-  		<script src="bower_components/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
   		<script src="bower_components/angular-bootstrap-datetimepicker-directive/angular-bootstrap-datetimepicker-directive.min.js"></script>
+  		<script src="bower_components/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
         <!-- endbower -->
         <!-- endbuild -->
 
@@ -164,12 +164,15 @@
     <script src="scripts/app/usager/etudier/payment/payment.controller.js"></script>
     <script src="scripts/app/usager/etudier/summary/summary.js"></script>
     <script src="scripts/app/usager/etudier/summary/summary.controller.js"></script>
+    <script src="scripts/app/usager/etudier/rdv/rdv.js"></script>
+    <script src="scripts/app/usager/etudier/rdv/rdv.controller.js"></script>
     <script src="scripts/app/agent/agent.js"></script>
     <script src="scripts/app/agent/etudier/etudier.js"></script>
     <script src="scripts/app/agent/etudier/etudier.controller.js"></script>
     <script src="scripts/app/agent/etudier/validation/validation.js"></script>
     <script src="scripts/app/agent/etudier/validation/validation.controller.js"></script>
     <script src="scripts/components/demandes/demande.service.js"></script>
+    <script src="scripts/components/rdv/rdv.service.js"></script>
     <!-- endbuild -->
 </body>
 </html>
