--- a/src/main/webapp/scripts/app/usager/etudier/payment/payment.html
+++ b/src/main/webapp/scripts/app/usager/etudier/payment/payment.html
@@ -21,8 +21,8 @@
 	<br>
 	<div class="row">
     	<div class="col-xs-10 col-xs-offset-1 col-sm-10 col-sm-offset-1 col-md-10 col-md-offset-1 col-lg-10 col-lg-offset-1">
-   			<p>Vos frais de dossier s'élèvent à 50,00 euros. Ils seront débités quelle que soit l'issue de votre demande.</p>
-   			<p>Vos droits de timbre et taxes de séjour s'élèvent respectivement à 19,00 et 77,00 euros. Ils ne seront débités qu'en cas de décision favorable.</p>
+   			<p translate="payment.form.text1">application fee</p>
+   			<p translate="payment.form.text2">residency taxes</p>
    		</div>
 	</div>
 	<br>
