creation page recevabilite + ajout page liste validation

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -170,7 +170,11 @@
     <script src="scripts/app/agent/agent.js"></script>
     <script src="scripts/app/agent/etudier/etudier.js"></script>
     <script src="scripts/app/agent/etudier/etudier.controller.js"></script>
+    <script src="scripts/app/agent/etudier/recevability/recevability.js"></script>
+    <script src="scripts/app/agent/etudier/recevability/recevability_list.controller.js"></script>
+    <script src="scripts/app/agent/etudier/recevability/recevability.controller.js"></script>
     <script src="scripts/app/agent/etudier/validation/validation.js"></script>
+    <script src="scripts/app/agent/etudier/validation/validation_list.controller.js"></script>
     <script src="scripts/app/agent/etudier/validation/validation.controller.js"></script>
     <script src="scripts/components/demandes/demande.service.js"></script>
     <script src="scripts/components/rdv/rdv.service.js"></script>
