--- a/src/main/webapp/scripts/app/agent/etudier/recevability/recevability.html
+++ b/src/main/webapp/scripts/app/agent/etudier/recevability/recevability.html
@@ -1,22 +1,24 @@
 <div ng-cloak>
     <div class="row">
     	<div class="col-xs-11 col-xs-offset-1 col-sm-11 col-sm-offset-1 col-md-11 col-md-offset-1 col-lg-11 col-lg-offset-1 title-underscore">
-    		<h4 translate="validation.form.title" translate-values="{ studentName: '{{studentName}}'}"></h4>
+    		<h4  translate="recevability.form.title" translate-values="{ studentName: '{{studentName}}'}"></h4>
    		</div>
     </div>
 	<br>
 	<div class="row">
-		<div class="col-xs-5 col-xs-offset-1 col-sm-5 col-sm-offset-1 col-md-5 col-md-offset-1 col-lg-5 col-lg-offset-1">
+		<div class="col-xs-8 col-xs-offset-1 col-sm-8 col-sm-offset-1 col-md-8 col-md-offset-1 col-lg-8 col-lg-offset-1">
 			<div class="collapsable-panel" ng-class="{'opened': identityOpened}" ng-click="identityOpened = !identityOpened">
 				<div class="panel-heading" ng-click="loadIdentity();">
 					<span class="glyphicon glyphicon-triangle-bottom"></span>
-					<h5 class="panel-title" translate="validation.form.identity">Identity</h5>
+					<h5 class="panel-title" translate="recevability.form.identity">Identity</h5>
 				</div>
 			</div>
 		</div>
-		<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 validation-form">
-			<img src="assets/images/checkbox_checked.png">
-			<span translate="validation.form.validate.f" translate-values="{validationDate: '15/09/2015', validationAuthor: 'Ambassade de France'}">validate</span>
+		<div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 validation-form">
+			<img class="hand" src="assets/images/checkbox_unchecked.png" ng-show="!identityValidated" ng-click="identityValidated = !identityValidated; identityOpened = false;">
+			<img class="hand" src="assets/images/checkbox_checked.png" ng-show="identityValidated" ng-click="identityValidated = !identityValidated">
+			<span translate="recevability.form.toVerify" ng-show="!identityValidated">To validate</span>
+			<span translate="recevability.form.verified" ng-show="identityValidated">validate</span>
 		</div>
 	</div>
 	<div class="row" ng-show="identityOpened">
@@ -92,58 +94,19 @@
 		</div>
 	</div>
 	<div class="row">
-		<div class="col-xs-5 col-xs-offset-1 col-sm-5 col-sm-offset-1 col-md-5 col-md-offset-1 col-lg-5 col-lg-offset-1">
-			<div class="collapsable-panel">
-				<div class="panel-heading">
-					<h5 class="panel-title" translate="validation.form.policeControl">Police Control</h5>
-				</div>
-			</div>
-		</div>
-		<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 validation-form">
-			<img src="assets/images/checkbox_checked.png">
-			<span translate="validation.form.validate.h" translate-values="{validationDate: '15/09/2015', validationAuthor: 'Gendarmerie'}">validate</span>
-		</div>
-	</div>
-	<div class="row">
-		<div class="col-xs-5 col-xs-offset-1 col-sm-5 col-sm-offset-1 col-md-5 col-md-offset-1 col-lg-5 col-lg-offset-1">
-			<div class="collapsable-panel">
-				<div class="panel-heading">
-					<h5 class="panel-title" translate="validation.form.preinscription">(Pre)inscription</h5>
-				</div>
-			</div>
-		</div>
-		<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 validation-form">
-			<img src="assets/images/checkbox_checked.png">
-			<span translate="validation.form.confirm.f" translate-values="{confirmationDate: '09/09/2015', confirmationAuthor: 'Campus France'}">validate</span>
-		</div>
-	</div>
-	<div class="row">
-		<div class="col-xs-5 col-xs-offset-1 col-sm-5 col-sm-offset-1 col-md-5 col-md-offset-1 col-lg-5 col-lg-offset-1">
-			<div class="collapsable-panel">
-				<div class="panel-heading">
-					<h5 class="panel-title" translate="validation.form.documents">Documents</h5>
-				</div>
-			</div>
-		</div>
-		<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 validation-form">
-			<img src="assets/images/checkbox_checked.png">
-			<span translate="validation.form.certify.h.p" translate-values="{certificationDate: '15/09/2015', certificationAuthor: 'Ambassade de France'}">validate</span>
-		</div>
-	</div>
-	<div class="row">
-		<div class="col-xs-5 col-xs-offset-1 col-sm-5 col-sm-offset-1 col-md-5 col-md-offset-1 col-lg-5 col-lg-offset-1">
+		<div class="col-xs-8 col-xs-offset-1 col-sm-8 col-sm-offset-1 col-md-8 col-md-offset-1 col-lg-8 col-lg-offset-1">
 			<div class="collapsable-panel" ng-class="{'opened': projectOpened}" ng-click="projectOpened = !projectOpened">
 				<div class="panel-heading">
 					<span class="glyphicon glyphicon-triangle-bottom"></span>
-					<h5 class="panel-title" translate="validation.form.project">Project</h5>
+					<h5 class="panel-title" translate="recevability.form.project">Project</h5>
 				</div>
 			</div>
 		</div>
-		<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 validation-form">
+		<div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 validation-form">
 			<img class="hand" src="assets/images/checkbox_unchecked.png" ng-show="!projectValidated" ng-click="projectValidated = !projectValidated; projectOpened = false;">
 			<img class="hand" src="assets/images/checkbox_checked.png" ng-show="projectValidated" ng-click="projectValidated = !projectValidated">
-			<span translate="validation.form.toValidate" ng-show="!projectValidated">To validate</span>
-			<span translate="validation.form.validate.h" translate-values="{validationDate: todayDate, validationAuthor: 'Administration centrale'}" ng-show="projectValidated">validate</span>
+			<span translate="recevability.form.toVerify" ng-show="!projectValidated">To validate</span>
+			<span translate="recevability.form.verified" ng-show="projectValidated">validate</span>
 		</div>
 	</div>
 	<div class="row" ng-show="projectOpened">
@@ -221,24 +184,12 @@
 			</div>
 		</div>
 	</div>
-	<div class="row">
-		<div class="col-xs-5 col-xs-offset-1 col-sm-5 col-sm-offset-1 col-md-5 col-md-offset-1 col-lg-5 col-lg-offset-1">
-			<div class="collapsable-panel">
-				<div class="panel-heading">
-					<h5 class="panel-title" translate="validation.form.history">History</h5>
-				</div>
-			</div>
-		</div>
-		<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 validation-form">
-			<span translate="validation.form.noHistory">No history</span>
-		</div>
-	</div>
 	<br>
 	<br>
 	<div class="row row-center">
 		<div class="col-xs-10 col-xs-offset-1 col-sm-10 col-sm-offset-1 col-md-10 col-md-offset-1 col-lg-10 col-lg-offset-1">
-	    	<button class="btn btn-danger" translate="validation.form.button.decline">Decline</button>
-	    	<button class="btn btn-success" ng-disabled="!projectValidated" translate="validation.form.button.accept" style="margin-left: 20px">Accept</button>
+	    	<button class="btn btn-danger" translate="recevability.form.button.decline">Decline</button>
+	    	<button class="btn btn-success" style="margin-left: 20px" ng-disabled="!identityValidated || !projectValidated" translate="recevability.form.button.accept" ng-click="verify()">Accept</button>
 		</div>
 	</div>
 </div>
